--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "title": "ReducShare",
+    "title": "REDUCSHARE",
     "name": "ReducShareWebSite",
     "version": "5.0.9",
     "scripts": {
